<resources>
    <string name="app_name">Alc 4 phase 1 </string>
    <string name="action_settings">Settings</string>
    <string name="name">Allan Sifuna</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Kenya</string>
    <string name="email">Email: allansifuna324@gmail.com</string>
    <string name="phone">Phone Number :25473284988</string>
    <string name="username">Slack Username: \@allansifuna</string>
    <string name="todo">TODO</string>
    <string name="my_profile">My Profile</string>
    <string name="about_alc">About ALC</string>
    <string name="welcome_to_alc_4_0">Welcome to Alc 4.0</string>
</resources>