<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_main">
    <!--<com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="198dp"
        android:contentDescription="@string/todo"
        android:scaleType="centerCrop"
        app:srcCompat="@mipmap/allansifuna" />


    <LinearLayout
        android:id="@+id/details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/details_margin_start"
        android:paddingTop="4dp"
        android:paddingEnd="@dimen/details_margin_start"
        android:saveEnabled="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/default_gap"
            android:fontFamily="@font/aclonica"
            android:text="@string/name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:typeface="serif" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="8dp"
            android:background="@color/welcome_black" />
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:text="@string/track"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/welcome_black"
            android:typeface="serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:text="@string/country"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/welcome_black"
            android:typeface="serif"

            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:text="@string/email"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/welcome_black"
            android:typeface="serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:text="@string/phone"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/welcome_black"
            android:typeface="serif" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_gap"
            android:layout_marginBottom="@dimen/default_gap"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/welcome_black"
            android:typeface="serif" />

    </LinearLayout>



</androidx.appcompat.widget.LinearLayoutCompat>