<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme.AppBarOverlay"
    tools:context=".DashboardActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="354dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/welcome_to_alc_4_0"
        android:textAlignment="center"
        android:textColor="@color/welcome_black"
        android:textSize="28sp"
        android:textStyle="bold"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/about_alc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_buttons"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/about_alc"
        android:textSize="24sp"
        android:textColor="@color/welcome_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.453"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_buttons"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:text="@string/my_profile"
        android:textSize="24sp"
        android:textColor="@color/welcome_black"
        android:fontFamily="@font/aclonica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_alc" />

</androidx.constraintlayout.widget.ConstraintLayout>